# myflaskapp

./: .coveragerc  .dockerignore  .gitignore  .htmllintrc  .pre-commit-config.yaml  .pylintrc  .pyup.yml  Dockerfile  Pipfile  Procfile  README.md  app.json  autoapp.py  babel.cfg  boot-worker.sh  boot.sh  docker-compose.yml  gunicorn.conf.py  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  run.py  wsgi.py
.circleci/: config.yml
app/: __init__.py  app.py  commands.py  database.py  email.py  extensions.py  settings.py  utils.py
app/auth/: __init__.py  email.py  forms.py  views.py
app/auth/templates/: login.html  register.html
app/auth/templates/email/: confirm_email.html  confirm_email.txt  reset_password.html  reset_password.txt
app/messages/: __init__.py  models.py  views.py
app/messages/templates/: messages.html
app/notification/: models.py
app/public/: views.py
app/public/templates/: about.html  home.html
app/static/css/: style.css
app/task/: models.py  tasks.py
app/templates/: 401.html  404.html  500.html  base.html  footer.html  nav.html
app/templates/email/: confirm_email.html  confirm_email.txt  reset_password.html  reset_password.txt
app/translations/fr/LC_MESSAGES/: messages.po
app/user/: __init__.py  forms.py  models.py  views.py
app/user/templates/: edit_profile.html  login.html  members.html  profile.html  register.html  reset_password.html  reset_password_request.html
migrations/: env.py
migrations/versions/: 107f0f6ae508_add_users.py  37fb54649ac2_add_tasks.py  3b87320ffdc5_add_messages.py  40a38ea39210_add_notifications.py  536562bed58a_.py  536562bed58a_add_users.py  c7e3b474c749_.py  c7e3b474c749_add_roles.py  e958b6403061_add_user_locale_last_seen.py
myflaskapp/: app.py  commands.py  email.py  extensions.py  settings.py
myflaskapp/public/templates/: about.html
myflaskapp/templates/: 401.html  404.html  500.html  base.html  layout.html  nav.html
myflaskapp/user/: models.py  views.py
myflaskapp/user/templates/: members.html  register.html  reset_password.html  reset_password_request.html
tests/: conftest.py  factories.py  test_forms.py  test_functional.py  test_models.py
tests/auth/: test_forms.py  test_views.py
tests/messages/: test_views.py
tests/public/: test_views.py
tests/user/: test_models.py  test_views.py
