[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'myflaskapp'
readme = 'README.md'

[tool.autopep8]
aggressive = 3
ignore = "E126"
max_line_length = 100

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = ['app/commands.py', 'app/task/tasks.py']

[tool.isort]
known_first_party = ['app']
line_length = 100

[tool.mypy]
disallow_incomplete_defs = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'flask_babel.*',
  'flask_wtf.*',
  'flask_bcrypt.*',
  'flask_bootstrap.*',
  'flask_caching.*',
  'flask_debugtoolbar.*',
  'flask_login.*',
  'flask_mail.*',
  'flask_migrate.*',
  'flask_moment.*',
  'flask_sqlalchemy.*',
  'wtforms.*',
  'sqlalchemy.*',
  'secure.*',
  'maya.*',
  'pytest.*',
  'rq.*',
  'rollbar.*',
  'eralchemy.*',
  'jwt.*'
]

[tool.pylint]
disable = 'all'
enable = [
  'bad-continuation',
  'relative-import',
  'wrong-import-order',
  'unused-import',
  'pointless-statement',
  'invalid-name',
  'duplicate-code',
  'line-too-long',
  'bad-indentation',
  'wildcard-import',
  'bad-except-order',
  'bad-format-string',
  'unsupported-membership-test',
  'redefined-builtin'
]
ignore = ['migrations']
max_line_length = 100

[tool.pytest.ini_options]
addopts = '--verbose -rsxX --showlocals --tb=short -n 3 --cov=app --cov-report=html'
# pythonpath = '. app'
testpaths = ['tests']
xfail_strict = true

[tool.setuptools]
packages = ['app']

[tool.tomlsort]
in_place = true
sort_first = ['source', 'packages', 'dev-packages', 'requires']
sort_table_keys = true

[tool.yapf]
based_on_style = 'pep8'
column_limit = 100
spaces_before_comment = 2
